// prisma/schema.prisma

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// =========================
// User
// =========================

model User {
  id          String  @id @default(cuid())
  firebaseUid String  @unique
  displayName String?

  missionProgresses UserMissionProgress[]
  lessonProgresses  UserLessonProgress[]
  examProgresses    UserMissionExamProgress[]

  activityAnswerLogs     ActivityAnswerLog[]
  missionExamSubmissions MissionExamSubmission[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// =========================
// Course Master
// =========================

model Course {
  id          String           @id @default(cuid())
  title       String
  description String
  difficulty  CourseDifficulty

  isInitiallyUnlocked Boolean @default(true)
  isPublished         Boolean @default(true)
  version             Int     @default(1)

  missions   Mission[]
  categories CourseCategoryMap[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model CourseCategory {
  id   String             @id @default(cuid())
  name CourseCategoryType @unique

  courses CourseCategoryMap[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model CourseCategoryMap {
  courseId   String
  categoryId String

  course   Course         @relation(fields: [courseId], references: [id], onDelete: Cascade)
  category CourseCategory @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@id([courseId, categoryId])
}

// =========================
// Mission / Lesson Master
// =========================

model Mission {
  id          String           @id @default(cuid())
  courseId    String
  title       String
  description String
  difficulty  CourseDifficulty
  goalImg     String

  estimatedMinutes Int @default(10)

  // Course内での順番。Missionのロック判定に使う
  order Int

  type                          MissionType @default(MAIN)
  isRequiredForCourseCompletion Boolean     @default(true)
  parentMissionId               String?
  roadmapLane                   Int         @default(0)
  branchOrder                   Int         @default(0)

  isPublished Boolean @default(true)

  course Course @relation(fields: [courseId], references: [id], onDelete: Cascade)

  parentMission  Mission?  @relation("MissionBranch", fields: [parentMissionId], references: [id], onDelete: SetNull)
  branchMissions Mission[] @relation("MissionBranch")

  lessons Lesson[]
  exam    MissionExam?

  progresses UserMissionProgress[]

  missionExamSubmissions MissionExamSubmission[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([courseId, order])
  @@index([courseId, type])
  @@index([parentMissionId])
}

model Lesson {
  id          String @id @default(cuid())
  missionId   String
  title       String
  description String

  // Mission内での順番。Lessonのロック判定に使う
  order Int

  rewardExp Int @default(30)

  learnedItems String[] @default([])

  mission Mission @relation(fields: [missionId], references: [id], onDelete: Cascade)

  activities LessonActivity[]

  progresses UserLessonProgress[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([missionId, order])
}

model LessonActivity {
  id            String         @id @default(cuid())
  lessonId      String
  type          LessonStepType
  title         String
  instruction   String
  mentorMessage String

  // choices, blanks, blankChoices, input, summary, starterCode, sampleCode などをまとめる
  content Json

  // preview type, title, html, caption, previewKey, minHeight などをまとめる
  preview Json

  actionLabel String

  // Lesson内での活動順
  order Int

  lesson Lesson @relation(fields: [lessonId], references: [id], onDelete: Cascade)

  answerLogs ActivityAnswerLog[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([lessonId, order])
}

// =========================
// Mission Exam Master
// =========================

model MissionExam {
  id        String @id @default(cuid())
  missionId String @unique

  title       String
  description String

  thumbnailUrl String?
  previewCss   String?

  estimatedTime String
  rewardExp     Int    @default(100)

  mission Mission @relation(fields: [missionId], references: [id], onDelete: Cascade)

  variants    MissionExamVariant[]
  progresses  UserMissionExamProgress[]
  submissions MissionExamSubmission[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model MissionExamVariant {
  id            String         @id @default(cuid())
  missionExamId String
  difficulty    ExamDifficulty

  initialCode String
  answerCode  String

  missionExam MissionExam @relation(fields: [missionExamId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([missionExamId, difficulty])
}

// =========================
// User Progress
// =========================

model UserMissionProgress {
  id        String @id @default(cuid())
  userId    String
  missionId String

  status ProgressStatus @default(IN_PROGRESS)

  startedAt   DateTime?
  completedAt DateTime?

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  mission Mission @relation(fields: [missionId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, missionId])
}

model UserLessonProgress {
  id       String @id @default(cuid())
  userId   String
  lessonId String

  status ProgressStatus @default(IN_PROGRESS)

  startedAt   DateTime?
  completedAt DateTime?

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  lesson Lesson @relation(fields: [lessonId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, lessonId])
}

model UserMissionExamProgress {
  id            String         @id @default(cuid())
  userId        String
  missionExamId String
  difficulty    ExamDifficulty

  passed Boolean @default(false)

  startedAt   DateTime?
  completedAt DateTime?

  user        User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  missionExam MissionExam @relation(fields: [missionExamId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, missionExamId, difficulty])
}

// =========================
// Logs / Submissions
// =========================

model ActivityAnswerLog {
  id               String @id @default(cuid())
  userId           String
  lessonActivityId String

  // selectedChoiceId, userAnswer などを保存
  answer Json

  isCorrect Boolean?

  answeredAt DateTime @default(now())

  user           User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  lessonActivity LessonActivity @relation(fields: [lessonActivityId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([lessonActivityId])
}

model MissionExamSubmission {
  id            String         @id @default(cuid())
  userId        String
  missionId     String
  missionExamId String
  difficulty    ExamDifficulty

  submittedCode String
  isCorrect     Boolean

  submittedAt DateTime @default(now())

  user        User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  mission     Mission     @relation(fields: [missionId], references: [id], onDelete: Cascade)
  missionExam MissionExam @relation(fields: [missionExamId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([missionId])
  @@index([missionExamId])
  @@index([difficulty])
}

// =========================
// Enums
// =========================

enum CourseDifficulty {
  EASY
  NORMAL
  HARD
}

enum MissionType {
  MAIN
  CHALLENGE
}

enum ExamDifficulty {
  EASY
  NORMAL
  HARD
}

enum CourseCategoryType {
  GAME
  ALGORITHM
  TOOL
  UI
  DATA
}

enum LessonStepType {
  TRY_CODE
  TUTORIAL
  VIEW
  CHOICE
  SELECT_FILL
}

enum ProgressStatus {
  IN_PROGRESS
  COMPLETED
}
